--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-</head>
-<body>
-    <h1>HELLO WORLD!!</h1>
-</body>
-</html>
+{% extends 'blog/layout.html' %}
+
+{% block title %}Posts | Django Blog{% endblock %}
+
+{% block main %}
+    <h2>Posts</h2>
+    <div class="post-box rounded-5 bg-white w-50 m-auto">
+        {% for post in posts %}
+            <article class="m-4 p-2 rounded">
+                <a href="#">
+                    <h3>{{ post.title }}</h3>
+                </a>
+                <small>{{post.pub_date}}</small>
+            </article>
+        {% endfor %}
+    </div>
+{% endblock %}
