last version Blog with Django and MySQL

--- a/templates/blog/write.html
+++ b/templates/blog/write.html
@@ -5,7 +5,7 @@
 {% block main %}
     <h2>Write The New Post</h2>
     <div class="w-50 m-auto py-5 bg-beige rounded-5">
-        <form action="#" class="mb-3 mx-2" method="post">
+        <form action="{% url 'insert' %}" class="mb-3 mx-2" method="post">
             {% csrf_token %}
             <div class="mb-5">
                 <label for="title" class="form-label">Title Of The Post</label>
