--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -7,7 +7,7 @@
     <div class="post-box rounded-5 bg-white w-50 m-auto">
         {% for post in posts %}
             <article class="m-4 p-2 rounded">
-                <a href="#">
+                <a href="{% url 'post' post.id %}">
                     <h3>{{ post.title }}</h3>
                 </a>
                 <small>{{post.pub_date}}</small>
